ready for production

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;1,300&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* //tainwind use */
+/* //tailwind use */
 
 body {
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 ::-webkit-scrollbar-thumb {
